# PersonalFinanceDashboardAndTradingPlatform

./: .env.example  .gitignore  Makefile  PLATFORM_STATUS.md  README.md  docker-compose.override.yml  docker-compose.yml  master-plan.md  next-sprint-plan.md  platform-completion-plan.md  tier4-expansion-plan.md  trading-platform-plan.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: README.md  __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/api/: README.md
backend/app/api/v1/: __init__.py  admin.py  alerts.py  auth.py  backtest.py  calendar.py  crypto.py  forex_orders.py  fundamentals.py  journal.py  macro.py  market.py  ml.py  news.py  options.py  orders.py  portfolio.py  router.py  screener.py  strategies.py  utils.py  watchlist.py  workspaces.py
backend/app/api/ws/: __init__.py  alerts_feed.py  market_feed.py  orderbook_feed.py  orders_feed.py  router.py  tape_feed.py
backend/app/auth/: jwt.py  password.py  rbac.py  totp.py
backend/app/data/cache/: __init__.py  pubsub.py  quote_cache.py  redis_client.py
backend/app/data/ingestion/: __init__.py  normalizer.py  scheduler.py  writer.py
backend/app/middleware/: __init__.py  rate_limit.py
backend/app/models/: README.md  __init__.py  alert.py  audit_log.py  dashboard_layout.py  economic_event.py  fundamental.py  ohlcv.py  order.py  portfolio.py  screener_preset.py  strategy_config.py  user.py  watchlist.py  workspace.py
backend/app/services/: README.md  kill_switch.py
backend/app/services/alerts/: dispatcher.py  evaluator.py
backend/app/services/audit/: __init__.py  logger.py
backend/app/services/crypto/: __init__.py  binance.py  coingecko.py
backend/app/services/fundamentals/: factset.py  fmp.py  openfigi.py
backend/app/services/indicators/: __init__.py  extended.py  momentum.py  volume_structure.py
backend/app/services/macro/: fred.py
backend/app/services/market_data/: alpaca.py  base.py  oanda.py  router.py  yahoo_finance.py
backend/app/services/news/: aggregator.py  benzinga.py  earningscall.py  newsapi.py  openinsider.py  reddit.py  refinitiv.py  sec_edgar.py  stocktwits.py  twitter.py  yahoo_news.py
backend/app/services/options/: greeks.py  polygon.py
backend/app/services/orders/: __init__.py  oanda_order_service.py  service.py
backend/app/services/risk/: ratios.py
backend/app/services/screener/: engine.py  universe.py
backend/app/services/sentiment/: aggregator.py  finbert.py  ner_extractor.py  openai_scorer.py
backend/app/tasks/: README.md  alert_tasks.py  celery_app.py  data_tasks.py  fill_tasks.py  fundamentals_tasks.py  journal_tasks.py  ml_tasks.py  order_tasks.py  sentiment_tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 0002_add_workspaces.py  0003_add_strategy_configs.py  0004_add_screener_presets.py  0005_add_order_book_snapshots.py  0006_add_fundamentals_fmp.py  20260713_2249_4deb89231638_initial_schema.py
backend/scripts/: __init__.py  init_mongodb_indexes.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_migrations.py
backend/tests/unit/: test_adapters.py  test_alerts.py  test_auth.py  test_d1_d2_orders.py  test_data_tasks.py  test_factset_adapter.py  test_fmp_adapter.py  test_grid_search_and_pdf.py  test_indicators_endpoint.py  test_iv_surface.py  test_journal.py  test_market.py  test_ml.py  test_ml_models.py  test_new_adapters.py  test_news_adapters.py  test_oanda_adapter.py  test_openfigi_adapter.py  test_orders.py  test_portfolio_import.py  test_refinitiv_adapter.py  test_regime.py  test_risk_and_greeks.py  test_screener_presets.py  test_strategies.py  test_track_e_mlops.py  test_track_f_engine.py  test_twitter_adapter.py  test_vpvr.py  test_workspaces.py  test_yahoo_news_adapter.py
backtesting/: README.md
backtesting/engine/: __init__.py  base.py  event_driven.py  tick_replay.py  vectorized.py
backtesting/optimization/: README.md  __init__.py  bayesian.py  grid_search.py  monte_carlo.py  walk_forward.py
backtesting/reporting/: README.md  __init__.py  html_report.py  pdf_report.py
backtesting/strategies/: README.md  __init__.py  bollinger_band.py  dynamic.py  macd_cross.py  rsi_mean_reversion.py  sma_cross.py  vwap_reversion.py
backtesting/tests/: __init__.py  test_dynamic_strategy.py  test_engines.py  test_tick_replay.py
docs/: README.md
docs/adr/: ADR-001-fastapi-sqlalchemy.md  ADR-002-timescaledb-for-timeseries.md  ADR-003-nextjs-lightweight-charts.md  ADR-004-celery-redis-worker.md  ADR-005-transformer-deferral.md  ADR-006-db-backed-strategies.md  ADR-007-weasyprint-pdf-reports.md  ADR-008-pytorch-lstm-model.md  ADR-009-reuters-refinitiv.md  ADR-010-institutional-data-vendors.md  ADR-011-bloomberg-alphaspace.md  ADR-012-fix-protocol.md  ADR-013-cpp-engine.md  README.md
docs/architecture/: api-contract.md  data-flow.md  database-schema.md  system-overview.md
docs/decisions/: ADR-001-frontend-framework.md  ADR-002-database-selection.md  ADR-003-websocket-architecture.md  ADR-004-backtesting-engine-design.md
engine/: CMakeLists.txt  README.md
engine/fix/: fix_session.h  fix_session_simulated.cpp
engine/include/: order_book.h  order_manager.h  risk_manager.h
engine/python/: engine_bridge.py
engine/scripts/: build_engine.sh
engine/src/: order_book.cpp  order_manager.cpp  python_bridge.cpp  risk_manager.cpp
engine/tests/: CMakeLists.txt  test_order_book.cpp  test_order_manager.cpp  test_risk_manager.cpp
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
infra/: README.md
ml/: README.md
tests/: README.md
(+149 files in other folders)
