[project]
name = "quantnexus-backend"
version = "0.1.0"
description = "QuantNexus — Enterprise algorithmic trading platform data service."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.139.0",
    "greenlet>=3.5.3",
    "hmmlearn>=0.3.3",
    "httpx>=0.28.1",
    "motor>=3.6",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pymongo>=4.17.0",
    "pyotp>=2.10.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "redis[hiredis]>=8.0.1",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.51.0",
    "websockets>=16.1",
    "yfinance>=1.5.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
env = [
    "APP_ENV=test",
    "JWT_SECRET_KEY=test-secret-key-minimum-32-chars-long",
    "JWT_ALGORITHM=HS256",
    "DATABASE_URL=sqlite+aiosqlite:///./test.db",
    "DATABASE_SYNC_URL=sqlite:///./test.db",
    "REDIS_URL=redis://localhost:6379/0",
    "MONGODB_URL=mongodb://localhost:27017",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
]
ignore = [
    "S101",  # assert used in tests
    "S105",  # hardcoded-password — handled by bandit separately
    "B008",  # do not perform function calls in default arguments (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "N"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert in tests

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "bandit>=1.9.4",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.21",
]
